objects/CaseContracts__c.object
<CustomObject>
    <description>SFDC1-593 - Junction object between Case and Contracts</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SFDC1-593 - Account Name from Contract</description>
        <formula>Contract__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>SFDC1-593 - Master detail relationship to Case</description>
        <inlineHelpText>Select the Case you wish to relate to a Contract.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Contracts</relationshipLabel>
        <relationshipName>CaseContracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <description>SFDC1-9099:Response Management - Display more details on the Related list</description>
        <formula>Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Name</inlineHelpText>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>SFDC1-9099:Response Management - Display more details on the Related list</description>
        <formula>Contract__r.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Number</inlineHelpText>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <description>SFDC1-9099:Response Management - Display more details on the Related list</description>
        <formula>TEXT(Contract__r.ContractStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Status</inlineHelpText>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-593 - Lookup to contract</description>
        <inlineHelpText>Select the Contract you wish to relate to a Case.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Case Contracts</relationshipLabel>
        <relationshipName>CaseContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contains concatenated 18-char Id of Case and 18-char Id of Contract from L-Markit</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PKIDCaseContracts__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CCt{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID CaseContracts</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Contract__r.TotalContractValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Case Contracts</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Case Contracts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>